Use a simple file system API instead of custom URL handlers
The original code heavily abused custom URL handlers in order to hook into
the classloading framework using regular URLClassLoader objects.  While
this was a simple solution, it had several shortcomings:

* URL objects could not safely be converted to/from strings.  The embedded
  state would be lost when converted to a string.

* URL objects contained references to complex application state.  If user
  code held onto a URL it could prevent garbage collection.

* Using URLs to obtain directory listings was confusing because it required
  passing the information through binary streams.

* URLClassLoader objects could not be efficiently loaded into a directed
  acyclic graph to express needed dependencies.  The CompoundClassLoader
  bypassed this limitation, but it could cause shared dependencies to be
  visited multiple times.

* URLs with common protocols (such as "file", "http", etc.) often get
  handled in special ways in other code.  Trying to avoid them required the
  use of long and strange protocol names.

Instead of abusing URLs, add a new classloader that can read from arbitrary
file systems with only a minimum amount of code.  The new classloader
understands dependencies and is able to scan a complex classpath much more
efficiently.